# GCminizam

./: CMakeLists.txt  README.md
minizam-full/src/: GC.h  Makefile  MarkAndSweep.c  MarkAndSweep.h  StopAndCopy.c  StopAndCopy.h  alloc.c  alloc.h  config.h  domain.c  domain_state.h  interp.c  minizam.c  mlvalues.c  mlvalues.h  parser.c
minizam-full/tests/bench/: list_3.ml
